<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="app_desc">My Story. Post your own story, check latest stories from your friends, partners, and many more. Join us for free!</string>
    <string name="front_image">front image</string>
    <string name="logo">Logo</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="have_account">Already have an account? </string>
    <string name="register_desc">Here\'s your first step with us!</string>
    <string name="login_desc">Please login to continue!</string>
    <string name="story_image">story image</string>
    <string name="story_description">story description</string>
    <string name="upload_story">Upload Story</string>
    <string name="preview">preview</string>
    <string name="take_a_picture">take a picture</string>
    <string name="select_from_gallery">select from gallery</string>
    <string name="add_story">add_story</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>